feat: add last team handlefunc, add swagger and fix readme, start to do prs handlers
